Fixed issue with player on frontpage on smaller windows overlapped where it shouldn't

--- a/server/public/assets/css/style.css
+++ b/server/public/assets/css/style.css
@@ -3504,6 +3504,10 @@ nav ul li:hover, nav ul li.active {
         bottom: 55px;
     }
 
+    #video-container.video-container.frontpage-player {
+        width: auto !important;
+    }
+
     .chan {
         text-shadow: 0px 0px 0px rgba(0, 0, 0, 0.42);
         width: calc(100vw - 170px) !important;
